# CraftLet_Server

./: .gitignore  Dockerfile  Document.MD  pyproject.toml
src/app/: config.py  digitalAsset.py  main.py
src/app/api/v1/: dependency.py
src/app/api/v1/route/: auth.py  template.py
src/app/api/v1/schema/auth/: githubAuth.py
src/app/api/v1/schema/githubApi/: repositoryDetail.py
src/app/api/v1/schema/template/: templateFilter.py  templateIn.py  templateListElement.py  templateOut.py  templatePage.py  templateUpdate.py
src/app/api/v1/schema/user/: userOut.py
src/app/api/v1/service/: githubService.py  templateService.py
src/app/core/: client.py  decorator.py  enum.py  middleware.py
src/app/core/utils/: jwt.py
src/app/db/: __init__.py  user.py
src/app/db/model/: customTypes.py  template.py  user.py
