[project]
name = "craftlet-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.6.6",
    "certifi>=2025.11.12",
    "cryptography>=46.0.3",
    "dnspython>=2.8.0",
    "fastapi>=0.127.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "motor>=3.7.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "redis[hiredis]>=7.1.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "craftlet-server",
    "git-filter-repo>=2.47.0",
]

[tool.uv.sources]
craftlet-server = { workspace = true }
